video play error due to side tab z-index, fixed

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -261,7 +261,6 @@ a {
 	justify-content: flex-end;
 	align-items: center;
 	position: absolute;
-	z-index: 1;
 	/*transform: translateX(0) translateY(0) translateZ(0);*/
 	
 	div:nth-of-type(1) {
@@ -270,7 +269,7 @@ a {
 		margin-top: -10px;
 		background-color: $red;
 		position: fixed;
-		z-index: 7;
+		z-index: 1;
 		@extend .flex_center;
 		flex-direction: column;
 		transform: translateX(50%);
@@ -355,7 +354,6 @@ body {
 	height: 100%;
 	display: flex;
 	position: absolute;
-	z-index: 2;
 	justify-content: flex-end;
 	
 	#burger-icon-container {
@@ -470,6 +468,7 @@ main {
 		
 		width: 560px;
 		margin-left: 10%;
+		z-index: 2;
 		grid-column-start: 1;
 		grid-row-start: 1;
 		grid-row-end: 4;
